@@ -2,6 +2,7 @@
 <configuration>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" /></startup>
   <runtime>
+	<legacyCorruptedStateExceptionsPolicy enabled="true"/>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
